2008-01-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/eval.c (update_plot_bounds): Rename exported variables TERM_* to
	GPVAL_TERM_* so that they match other internally maintained variables.

2007-01-07  Allin Cottrell  <cottrell@wfu.edu>

	* term/pdf.trm (EMD_setfont):  Add support for encodings
	iso_8859_1 iso_8859_2 iso_8859_9 iso_8859_15 cp1250

2007-01-06  Allin Cottrell  <cottrell@wfu.edu>

	* term/emf.trm (EMD_setfont):  Add support for encodings
	iso_8859_2 iso_8859_9 cp1250 koi8r koi8u

2008-01-06  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm:  Default to abobeglyphnames TRUE.

2008-01-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (plotrequest):  Revert inadvertent change to handling of
	'set log cb' introduced 2007-08-31.

2008-01-04  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm: Missing semicolon in definition of gpPt4.

2007-12-31  Allin Cottrell  <cottrell@wfu.edu>

	* src/term_api.h src/term.c (change_term):  Add a field to TERM_TABLE.
	term->tscale is a scaling factor between internal terminal coordinates
	and the output pixel coordinates. Intended to support external mousing.

	* term/cairo.trm term/post.trm term/svg.trm: Initialize term->tscale.

	* src/eval.c (update_gpval_variables update_plot_bounds):
	Export pixel coordinates of plot boundary as seen in output image.
	TERM_XMIN TERM_XMAX TERM_YMIN TERM_YMAX

2007-12-31  Ethan A Merritt  <merritt@u.washington.edu>

	* src/show.c (show_variables) docs/gnuplot.doc:  Provide a mechanism
	for listed only select variables.  E.g. `show variables MOUSE` will
	list only variables whose name begins with the string "MOUSE".

2007-12-25  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc demo/hidden2.dem:
	Documentation and comments for 'set hidden3d {back|front}'.

2007-12-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (do_3dplot) src/graph3d.h 
	src/tables.c src/tables.h demo/hidden2.dem demo/html/Makefile